2008-03-15  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c: Define two new signals, request_queued
	and request_unqueued, to provided a clearer (and
	clearly-documented) lifecycle for messages, helping us (and other
	people) avoid bugs like #522601, SoupSession::authenticate signal
	emitted multiple times per message (reported and analyzed by Tommi
	Komulainen).

	* libsoup/soup-logger.c:
	* libsoup/soup-auth-manager.c:
	* libsoup/soup-auth-manager-ntlm.c: Use request_queued/unqueued

	* tests/auth-test.c (do_async_auth_test): add a regression test

2008-03-14  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-client-io.c (get_request_headers): Fix Host
	header syntax when the host is an IPv6 address literal. Noticed
	while poking at #522519.

2008-03-14  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-private.h (SoupMessagePrivate): add
	an orig_http_version field.

	* libsoup/soup-message.c (soup_message_init): initialize
	orig_http_version.
	(soup_message_set_http_version): If called before the status code
	is received, set orig_http_version too.
	(soup_message_cleanup_response): Restore orig_http_version, so
	that we don't send an HTTP/1.0 request in response to an HTTP/1.0
	redirect. #521848, Tommi Komulainen.

	* libsoup/soup-message-server-io.c (get_response_headers):
	actually output "HTTP/1.0", not "HTTP/1.1", if the message's http
	version is 1.0.

	* tests/redirect-test.c (server_callback): Add a regression test;
	set http_version to 1.0 when returning a redirect, but require it
	to be 1.1 when processing the following request

2008-03-13  Xan Lopez  <xan@gnome.org>

        * libsoup/soup-address.c:
        * libsoup/soup-auth-domain-basic.c:
        * libsoup/soup-auth-domain-digest.c:
        * libsoup/soup-auth-domain.c:
        * libsoup/soup-auth.c:
        * libsoup/soup-connection.c:
        * libsoup/soup-message.c:
        * libsoup/soup-server.c:
        * libsoup/soup-session.c:
        * libsoup/soup-socket.c:
