@@ -1288,7 +1288,7 @@ soup_server_pause_message (SoupServer *server,
 	g_return_if_fail (SOUP_IS_SERVER (server));
 	g_return_if_fail (SOUP_IS_MESSAGE (msg));
 
-	soup_message_io_unpause (msg);
+	soup_message_io_pause (msg);
 }
 
 /**
